src/objects/KaptioDocumentDateFormat__mdt/KaptioDocumentDateFormat__mdt.object-meta.xml
<CustomObject>
    <label>Kaptio Document Date Format</label>
    <pluralLabel>Kaptio Document Date Formats</pluralLabel>
</CustomObject>