src/objects/KaptioDocumentDateFormat__mdt/fields/Channels__c.field-meta.xml
<CustomField>
    <fullName>Channels__c</fullName>
    <description>The channels this document settings record apply to. Empty field will apply to all channels</description>
    <inlineHelpText>Please enter a comma separated list of channel code of the channels which these settings should apply to. Leave it empty to default to all channels not defined in other settings.</inlineHelpText>
    <label>Channels</label>
    <length>255</length>
    <type>Text</type>
</CustomField>