src/objects/KaptioDocumentDateFormat__mdt/fields/DateFirst__c.field-meta.xml
<CustomField>
    <fullName>DateFirst__c</fullName>
    <description>Date first version of the date format.</description>
    <inlineHelpText>Please enter the version of this date format with the date before the month</inlineHelpText>
    <label>Date First</label>
    <length>30</length>
    <type>Text</type>
</CustomField>