src/objects/KaptioDocumentDateFormat__mdt/fields/MonthFirst__c.field-meta.xml
<CustomField>
    <fullName>MonthFirst__c</fullName>
    <description>Month first version of date format. US format</description>
    <inlineHelpText>Please enter the version of this date format with the month before the date</inlineHelpText>
    <label>Month First</label>
    <length>30</length>
    <type>Text</type>
</CustomField>